# Todo_django

./: .gitignore  pyproject.toml
authentication/: urls.py
templates/: base.html  generic_form.html  index.html
todo/: settings.py  urls.py
todo_list/: admin.py  models.py  urls.py
todo_user/: admin.py  apps.py  models.py
